--- a/PL/CreateScheduleWindow.xaml
+++ b/PL/CreateScheduleWindow.xaml
@@ -15,7 +15,7 @@
 
         <Grid Grid.Column="0">
             <Label Content="Enter project starting date:" HorizontalAlignment="Left" Margin="90,25,0,0" VerticalAlignment="Top" FontSize="20"/>
-            <TextBox HorizontalAlignment="Left" Margin="110,60,0,0" Text="{Binding Starting, Mode=TwoWay}" VerticalAlignment="Top" Width="200" Height="30"/>
+            <DatePicker HorizontalAlignment="Left" Margin="185,60,0,0" Text="{Binding Starting, Mode=TwoWay}" VerticalAlignment="Top" Width="125" Height="29"/>
 
             <ListView ItemsSource="{Binding TaskList, Mode=TwoWay}"
                       MouseDoubleClick="TaskSelected_MouseDoubleClick" Height="300" Width="260" Margin="82,109,58,25"/>
@@ -23,10 +23,12 @@
 
         <Grid Grid.Column="1" Visibility="{Binding Flag, Converter={StaticResource TrueToVisibilityConverterKey}}">
             <Label Content="Enter task scheduled date:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="60,200,0,0" FontSize="20"/>
-            <TextBox Text="{Binding Date, Mode=TwoWay}" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="260" Margin="60,240,0,0" Height="30"/>
+            <!--TextBox Text="{Binding Date, Mode=TwoWay}" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="260" Margin="60,240,0,0" Height="30"/-->
+            <DatePicker Text="{Binding Date, Mode=TwoWay}" FontSize="16" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="140" Margin="180,240,0,0" Height="30"/>
 
             <Label Content="Id of the task:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="60,120,0,0" FontSize="20"/>
-            <TextBox IsEnabled="False" Text="{Binding MyTask.Id}" HorizontalAlignment="Left" Margin="200,120,0,0" VerticalAlignment="Top" Width="120" Height="37"/>
+            <TextBox IsEnabled="False" Text="{Binding MyTask.Id}" HorizontalAlignment="Left" Margin="200,134,0,0" VerticalAlignment="Top" Width="120" Height="19"/>
+
             <Button Content="Update" IsEnabled="{Binding Date, Converter={StaticResource VisibilityNotNullConverterKey}}" Click="UpdateButton_Click" Height="40" Width="80" HorizontalAlignment="Center" Margin="0,300,0,0" VerticalAlignment="Top" Background="White" FontSize="20"/>
 
         </Grid>
