--- a/PL/MainWindow.xaml
+++ b/PL/MainWindow.xaml
@@ -5,8 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL"
         mc:Ignorable="d"
-        Title="MainWindow" Height="500" Width="1000"
+        Title="MainWindow" Height="500" Width="800"
         DataContext="{Binding RelativeSource={RelativeSource Mode=Self}}">
+    
     <Grid>
         <Grid.Background>
             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -14,16 +15,103 @@
                 <GradientStop Color="#FF69CBF8" Offset="1"/>
             </LinearGradientBrush>
         </Grid.Background>
-        <Button Content="Manager" HorizontalAlignment="Left" VerticalAlignment="Bottom" Height="100" Width="200" FontFamily="Showcard Gothic" FontSize="24"
-                Click="ManagerMainWindow_Click" Background="White" Margin="100,0,0,100"/>
-        <Button Content="Engineer" HorizontalAlignment="Left" VerticalAlignment="Top" Height="100" Width="200"
-                Click="EngineerMainWindow_Click" Background="White" FontFamily="Showcard Gothic" FontSize="24" Margin="100,100,0,0"/>
+        <Button Content="Manager" HorizontalAlignment="Left" VerticalAlignment="Bottom"
+                Height="100" Width="200" FontFamily="Showcard Gothic" FontSize="24"
+                Click="ManagerMainWindow_Click" Background="White" Margin="100,0,0,100">
+            <!--Trigger that will start the storyBoard and the animation:-->
+            <Button.Triggers>
+                <!--Srarts when the mouse enter the button:-->
+                <EventTrigger RoutedEvent="Button.MouseEnter">
+                    <BeginStoryboard>
+                        <Storyboard>
+                            <!--Animates the button width:-->
+                            <DoubleAnimation
+                                From="200" To="220"
+                                Storyboard.TargetProperty="Width"
+                                Duration="0:0:0.4"/>
+                            <!--Animates the button height:-->
+                            <DoubleAnimation
+                                From="100" To="120"
+                                Storyboard.TargetProperty="Height"
+                                Duration="0:0:0.4"/>
+                        </Storyboard>
+                    </BeginStoryboard>
+                </EventTrigger>
+
+                <!--Srarts when the mouse leave the button:-->
+                <EventTrigger RoutedEvent="Button.MouseLeave">
+                    <BeginStoryboard>
+                        <Storyboard>
+                            <!--Animates the button width:-->
+                            <DoubleAnimation
+                                From="220" To="200"
+                                 Storyboard.TargetProperty="Width"
+                                Duration="0:0:0.4"/>
+                            <!--Animates the button height:-->
+                            <DoubleAnimation
+                                From="120" To="100"
+                                Storyboard.TargetProperty="Height"
+                                Duration="0:0:0.4"/>
+                        </Storyboard>
+                    </BeginStoryboard>
+                </EventTrigger>
+            </Button.Triggers>
+            
+        </Button>
+
+
+        <Button Content="Engineer" IsEnabled="{Binding IsSchedule}" HorizontalAlignment="Left" VerticalAlignment="Top"
+                Height="100" Width="200" FontFamily="Showcard Gothic" FontSize="24"
+                Click="EngineerMainWindow_Click" Background="White"  Margin="100,100,0,0">
+            <!--Trigger that will start the storyBoard and the animation:-->
+            <Button.Triggers>
+                <!--Srarts when the mouse enter the button:-->
+                <EventTrigger RoutedEvent="Button.MouseEnter">
+                    <BeginStoryboard>
+                        <Storyboard>
+                            <!--Animates the button width:-->
+                            <DoubleAnimation
+                        From="200" To="220"
+                        Storyboard.TargetProperty="Width"
+                        Duration="0:0:0.4"/>
+                            <!--Animates the button height:-->
+                            <DoubleAnimation
+                        From="100" To="120"
+                        Storyboard.TargetProperty="Height"
+                        Duration="0:0:0.4"/>
+                        </Storyboard>
+                    </BeginStoryboard>
+                </EventTrigger>
+
+                <!--Srarts when the mouse leave the button:-->
+                <EventTrigger RoutedEvent="Button.MouseLeave">
+                    <BeginStoryboard>
+                        <Storyboard>
+                            <!--Animates the button width:-->
+                            <DoubleAnimation
+                        From="220" To="200"
+                         Storyboard.TargetProperty="Width"
+                        Duration="0:0:0.4"/>
+                            <!--Animates the button height:-->
+                            <DoubleAnimation
+                        From="120" To="100"
+                        Storyboard.TargetProperty="Height"
+                        Duration="0:0:0.4"/>
+                        </Storyboard>
+                    </BeginStoryboard>
+                </EventTrigger>
+            </Button.Triggers>
+
+        </Button>
 
         <!--clock-->
-        <Label Content="{Binding Path=MyClock}" HorizontalAlignment="Left" VerticalAlignment="Top" Height="50" Width="200" FontSize="30" FontFamily="Segoe UI Black" Margin="420,190,0,0"/>
-        <Button Content="add year" Click="AddYear_Click" FontSize="20" Height="50" Width="100" HorizontalAlignment="Left" VerticalAlignment="Top" Background="White" Margin="352,242,0,0"/>
-        <Button Content="add month" Click="AddMonth_Click" FontSize="20" Height="50" Width="120" HorizontalAlignment="Left" VerticalAlignment="Top" Background="White" Margin="450,242,0,0"/>
-        <Button Content="add day" Click="AddDay_Click" FontSize="20" Height="50" Width="100" HorizontalAlignment="Left" VerticalAlignment="Top" Background="White" Margin="568,242,0,0"/>
+        <Label Content="{Binding Path=MyClock}" HorizontalAlignment="Left" VerticalAlignment="Top" Height="50" Width="200" FontSize="30" FontFamily="Segoe UI Black" Margin="460,190,0,0"/>
+        <Button Content="add year" Click="AddYear_Click" FontSize="20" Height="50" Width="100" HorizontalAlignment="Left" VerticalAlignment="Top" Background="White" Margin="388,242,0,0"
+                IsEnabled="{Binding IsSchedule}"/>
+        <Button Content="add month" Click="AddMonth_Click" FontSize="20" Height="50" Width="120" HorizontalAlignment="Left" VerticalAlignment="Top" Background="White" Margin="485,242,0,0"
+                IsEnabled="{Binding IsSchedule}"/>
+        <Button Content="add day" Click="AddDay_Click" FontSize="20" Height="50" Width="100" HorizontalAlignment="Left" VerticalAlignment="Top" Background="White" Margin="604,242,0,0"
+                IsEnabled="{Binding IsSchedule}"/>
 
     </Grid>
 </Window>
