--- a/PL/ManagerMainWindow.xaml
+++ b/PL/ManagerMainWindow.xaml
@@ -5,7 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL"
         mc:Ignorable="d"
-        Title="ManagerMainWindow" Height="450" Width="800">
+        Title="ManagerMainWindow" Height="450" Width="800"
+        DataContext="{Binding RelativeSource={RelativeSource Mode=Self}}">
+
     <Grid>
         <Grid.Background>
             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -15,19 +17,27 @@
         </Grid.Background>
         <!--Show engineers Button-->
         <Button Content="Show engineers" HorizontalAlignment="Left" Margin="490,120,0,0" VerticalAlignment="Top" 
-                Height="70" Width="130" Click="Button_Engineer_Click" FontSize="15" Background="White" BorderBrush="Black"/>
+                Height="70" Width="130" Click="Button_Engineer_Click" FontSize="15" Background="White" BorderBrush="Black"
+                IsEnabled="{Binding IsSchedule}"/>
+        <!--Show tasks Button-->
+        <Button Content="show tasks" Click="Button_Task_Click"  FontSize="20" Background="White" BorderBrush="Black"
+        Height="70" Width="130" HorizontalAlignment="Left" Margin="490,230,0,0" VerticalAlignment="Top"/>
+
         <!--Initialize Data Button-->
         <Button Content="Initialize data" HorizontalAlignment="Left" VerticalAlignment="Top" 
                 Height="70" Width="130" Click="Button_Initialize_Click" FontSize="20" Background="White" BorderBrush="Black" Margin="80,230,0,0"/>
         <!--Reset Data Button-->
         <Button Content="Reset data" HorizontalAlignment="Left" VerticalAlignment="Top" 
                 Height="70" Width="130" Click="Button_Reset_Click" FontSize="20" Background="White" BorderBrush="Black" Margin="80,120,0,0"/>
-        <Button Content="show tasks" Click="Button_Task_Click"  FontSize="20" Background="White" BorderBrush="Black"
-                Height="70" Width="130" HorizontalAlignment="Left" Margin="490,230,0,0" VerticalAlignment="Top"/>
+
+        <!--Gantt Chart Button-->
         <Button Content="Gantt Chart" Click="Button_Gantt_Click"  Width="130" Height="70" Background="White"
-                HorizontalAlignment="Left" VerticalAlignment="Top" Margin="280,230,0,0"/>
+                HorizontalAlignment="Left" VerticalAlignment="Top" Margin="280,230,0,0"
+                IsEnabled="{Binding IsSchedule}"/>
+        <!--Create a schedule Button-->
         <Button Content="Create a schedule" Click="Button_CreateSchedule_Click"  Height="70" Width="130" Background="White" 
-                HorizontalAlignment="Left" VerticalAlignment="Top" Margin="280,120,0,0"/>
+                HorizontalAlignment="Left" VerticalAlignment="Top" Margin="280,120,0,0"
+                IsEnabled="{Binding IsSchedule, Converter={StaticResource TrueToFalseConverterKey}}"/>
 
     </Grid>
 </Window>
