--- a/PL/Task/TaskWindow.xaml
+++ b/PL/Task/TaskWindow.xaml
@@ -8,6 +8,12 @@
         Title="TaskWindow"  Height="700" Width="1000"
         DataContext="{Binding RelativeSource={RelativeSource Mode=Self}}">
     <Grid>
+        <Grid.Background>
+            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                <GradientStop Color="#FFEBBAF9" Offset="1"/>
+                <GradientStop Color="#FFFCF9F9" Offset="0.023"/>
+            </LinearGradientBrush>
+        </Grid.Background>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="0.25*"/>
             <ColumnDefinition Width="1*"/>
@@ -105,8 +111,9 @@
         <Label Grid.Row="9" Grid.Column="1" Content="Required Effort Time:" 
         HorizontalAlignment="Right" VerticalAlignment="Center"/>
         <TextBox Text="{Binding Path=MyTask.RequiredEffortTime, Mode=TwoWay}" 
-         Grid.Row="9" Grid.Column="3" Width="200"
-         HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                 IsEnabled="{Binding IsSchedule, Converter={StaticResource TrueToFalseConverterKey}}"
+                 Grid.Row="9" Grid.Column="3" Width="200"
+                 HorizontalAlignment="Left" VerticalAlignment="Center"/>
 
         <!-- task complexity -->
         <Label Grid.Row="10" Grid.Column="1" Content="Complexity:" 
@@ -121,22 +128,25 @@
         <Label Grid.Row="11" Grid.Column="1" Content="Deliverables:" 
         HorizontalAlignment="Right" VerticalAlignment="Center"/>
         <TextBox Grid.Row="11" Grid.Column="3" HorizontalAlignment="Left"
-         VerticalAlignment="Center" Width="400"
+         VerticalAlignment="Center" Width="370"
          Text="{Binding Path=MyTask.Deliverables, Mode=TwoWay}"/>
 
         <!-- task remarks -->
         <Label Grid.Row="12" Grid.Column="1" Content="Remarks:" 
         HorizontalAlignment="Right" VerticalAlignment="Center"/>
         <TextBox Grid.Row="12" Grid.Column="3" HorizontalAlignment="Left"
-                 VerticalAlignment="Center" Width="400"
+                 VerticalAlignment="Center" Width="370"
                  Text="{Binding Path=MyTask.Remarks, Mode=TwoWay}"/>
 
         <!-- task engineer -->
         <Label Grid.Row="13" Grid.Column="1" Content="Assigned Engineer:" 
-        HorizontalAlignment="Right" VerticalAlignment="Center"/>
-        <Label Content="{Binding Path=MyTask.Engineer}"
-               Grid.Row="13" Grid.Column="3" Width="400" 
-               HorizontalAlignment="Left" VerticalAlignment="Stretch"/>
+               HorizontalAlignment="Right" VerticalAlignment="Top" Grid.ColumnSpan="2" Margin="0,6,33,0"/>
+        <Button Content="Choose from list" Grid.Row="13" Grid.Column="3" HorizontalAlignment="Left" Height="30"
+                Width="100" Click="ChooseEngineer_Click"  Background="#FFFFFEFE"
+                Visibility="{Binding MyTask.Engineer, Converter={StaticResource VisibilityNullConverterKey}}"/>
+        <TextBox Grid.Row="12" Grid.Column="3" Text="{Binding MyTask.Engineer}" IsEnabled="False"
+                 Visibility="{Binding MyTask.Engineer, Converter={StaticResource VisibilityNotNullConverterKey}}" Margin="0,41,30,2" Grid.RowSpan="2"/>
+
 
         <!-- task dependencies -->
         <Label Grid.Row="0" Grid.Column="4" Content="Dependencies:" 
@@ -146,19 +156,22 @@
            ItemsSource="{Binding Path=MyTask.Dependencies, IsAsync=False}" />
         <Button Content="Add Dependant Task" HorizontalAlignment="Center"
                 Grid.Column="4" Grid.Row="13" Click="AddDependency"
-                VerticalAlignment="Center"/>
+                VerticalAlignment="Center" Background="White"/>
 
-        
+
         <!-- list of tasks to add to dependencies -->
         <Label Grid.Row="0" Grid.Column="4" Content="Choose Task To Add:" 
         HorizontalAlignment="Left" VerticalAlignment="Center" Visibility="{Binding DependenciesToAdd}"/>
         <ListView Grid.Column="4" Grid.RowSpan="12" Grid.Row="1"
         HorizontalAlignment="Center" Width="400" MouseDoubleClick="ChooseTask_MouseDoubleClick"
         ItemsSource="{Binding TaskList}" Visibility="{Binding DependenciesToAdd}"/>
-        
+
         <!-- add / update button-->
         <Button Content="{Binding Path=MyTask.Id, Converter={StaticResource ConverIdToContentKey}}"
                 Grid.ColumnSpan="5" Grid.Row="14" HorizontalAlignment="Center" Height="50"
-                Width="200" Click="Add_Update_Click" VerticalAlignment="Center"/>
+                Width="200" Click="Add_Update_Click" VerticalAlignment="Center" Background="#FFFFFEFE"/>
+        <!--delete button-->
+        <Button Content="Delete task" Grid.Row="14" HorizontalAlignment="Left" Height="50"
+                Width="115" Click="Delete_Click"  VerticalAlignment="Center" Background="#FFFFFEFE" Grid.Column="1" Grid.ColumnSpan="3" Margin="82,0,0,0"/>
     </Grid>
 </Window>
