--- a/PL/App.xaml
+++ b/PL/App.xaml
@@ -13,5 +13,6 @@
         <local:TrueToVisibilityConverter x:Key="TrueToVisibilityConverterKey"/>
         <local:DateToLengthConverter x:Key="DateToLengthConverterKey"/>
         <local:TimeSpanToLengthConverter x:Key="TimeSpanToLengthConverterKey"/>
+        <local:TaskToColorConverter x:Key="TaskToColorConverterKey"/>
     </Application.Resources>
 </Application>
