--- a/PL/MainWindow.xaml
+++ b/PL/MainWindow.xaml
@@ -7,111 +7,102 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="500" Width="800"
         DataContext="{Binding RelativeSource={RelativeSource Mode=Self}}">
+
+    <Window.Resources>
+        <Style x:Key="animationAndRound" TargetType="Button">
+            <Setter Property="Background" Value="White"/>
+            <Setter Property="Foreground" Value="Black"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border CornerRadius="30" BorderThickness="1" Background="White">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <!--Trigger that will start the storyBoard and the animation when the mouse is enter the button:-->
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Trigger.EnterActions>
+                        <BeginStoryboard>
+                            <Storyboard>
+                                <!--Animates the button width:-->
+                                <DoubleAnimation
+                            From="200" To="220"
+                            Storyboard.TargetProperty="Width"
+                            Duration="0:0:0.4"/>
+                                <!--Animates the button height:-->
+                                <DoubleAnimation
+                            From="100" To="120"
+                            Storyboard.TargetProperty="Height"
+                            Duration="0:0:0.4"/>
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </Trigger.EnterActions>
+
+                    <Trigger.ExitActions>
+                        <BeginStoryboard>
+                            <Storyboard>
+                                <!--Animates the button width:-->
+                                <DoubleAnimation
+                            From="220" To="200"
+                            Storyboard.TargetProperty="Width"
+                            Duration="0:0:0.4"/>
+                                <!--Animates the button height:-->
+                                <DoubleAnimation
+                            From="120" To="100"
+                            Storyboard.TargetProperty="Height"
+                            Duration="0:0:0.4"/>
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </Trigger.ExitActions>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+    </Window.Resources>
     
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="2.6*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="4*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="4*"/>
+        </Grid.RowDefinitions>
         <Grid.Background>
             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                 <GradientStop Color="#FFF9FAFA"/>
                 <GradientStop Color="#FF69CBF8" Offset="1"/>
             </LinearGradientBrush>
         </Grid.Background>
-        <Button Content="Manager" HorizontalAlignment="Left" VerticalAlignment="Bottom"
-                Height="100" Width="200" FontFamily="Showcard Gothic" FontSize="24"
-                Click="ManagerMainWindow_Click" Background="White" Margin="100,0,0,100">
-            <!--Trigger that will start the storyBoard and the animation:-->
-            <Button.Triggers>
-                <!--Srarts when the mouse enter the button:-->
-                <EventTrigger RoutedEvent="Button.MouseEnter">
-                    <BeginStoryboard>
-                        <Storyboard>
-                            <!--Animates the button width:-->
-                            <DoubleAnimation
-                                From="200" To="220"
-                                Storyboard.TargetProperty="Width"
-                                Duration="0:0:0.4"/>
-                            <!--Animates the button height:-->
-                            <DoubleAnimation
-                                From="100" To="120"
-                                Storyboard.TargetProperty="Height"
-                                Duration="0:0:0.4"/>
-                        </Storyboard>
-                    </BeginStoryboard>
-                </EventTrigger>
-
-                <!--Srarts when the mouse leave the button:-->
-                <EventTrigger RoutedEvent="Button.MouseLeave">
-                    <BeginStoryboard>
-                        <Storyboard>
-                            <!--Animates the button width:-->
-                            <DoubleAnimation
-                                From="220" To="200"
-                                 Storyboard.TargetProperty="Width"
-                                Duration="0:0:0.4"/>
-                            <!--Animates the button height:-->
-                            <DoubleAnimation
-                                From="120" To="100"
-                                Storyboard.TargetProperty="Height"
-                                Duration="0:0:0.4"/>
-                        </Storyboard>
-                    </BeginStoryboard>
-                </EventTrigger>
-            </Button.Triggers>
-            
-        </Button>
+        <Button Content="Manager" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center"
+                Height="100" Width="200" FontFamily="Showcard Gothic" FontSize="24" Grid.RowSpan="2"
+                Click="ManagerMainWindow_Click" Background="White"
+                Style="{StaticResource animationAndRound}"/>
 
 
-        <Button Content="Engineer" IsEnabled="{Binding IsSchedule}" HorizontalAlignment="Left" VerticalAlignment="Top"
-                Height="100" Width="200" FontFamily="Showcard Gothic" FontSize="24"
-                Click="EngineerMainWindow_Click" Background="White"  Margin="100,100,0,0">
-            <!--Trigger that will start the storyBoard and the animation:-->
-            <Button.Triggers>
-                <!--Srarts when the mouse enter the button:-->
-                <EventTrigger RoutedEvent="Button.MouseEnter">
-                    <BeginStoryboard>
-                        <Storyboard>
-                            <!--Animates the button width:-->
-                            <DoubleAnimation
-                        From="200" To="220"
-                        Storyboard.TargetProperty="Width"
-                        Duration="0:0:0.4"/>
-                            <!--Animates the button height:-->
-                            <DoubleAnimation
-                        From="100" To="120"
-                        Storyboard.TargetProperty="Height"
-                        Duration="0:0:0.4"/>
-                        </Storyboard>
-                    </BeginStoryboard>
-                </EventTrigger>
+        <Button Content="Engineer" IsEnabled="{Binding IsSchedule}" 
+                Grid.Column="0" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center"
+                Height="100" Width="200" FontFamily="Showcard Gothic" FontSize="24" Grid.RowSpan="2"
+                Click="EngineerMainWindow_Click" Background="White"
+                Style="{StaticResource animationAndRound}"/>
 
-                <!--Srarts when the mouse leave the button:-->
-                <EventTrigger RoutedEvent="Button.MouseLeave">
-                    <BeginStoryboard>
-                        <Storyboard>
-                            <!--Animates the button width:-->
-                            <DoubleAnimation
-                        From="220" To="200"
-                         Storyboard.TargetProperty="Width"
-                        Duration="0:0:0.4"/>
-                            <!--Animates the button height:-->
-                            <DoubleAnimation
-                        From="120" To="100"
-                        Storyboard.TargetProperty="Height"
-                        Duration="0:0:0.4"/>
-                        </Storyboard>
-                    </BeginStoryboard>
-                </EventTrigger>
-            </Button.Triggers>
-
-        </Button>
-
+        
         <!--clock-->
-        <Label Content="{Binding Path=MyClock}" HorizontalAlignment="Left" VerticalAlignment="Top" Height="50" Width="200" FontSize="30" FontFamily="Segoe UI Black" Margin="460,190,0,0"/>
-        <Button Content="add year" Click="AddYear_Click" FontSize="20" Height="50" Width="100" HorizontalAlignment="Left" VerticalAlignment="Top" Background="White" Margin="388,242,0,0"
-                IsEnabled="{Binding IsSchedule}"/>
-        <Button Content="add month" Click="AddMonth_Click" FontSize="20" Height="50" Width="120" HorizontalAlignment="Left" VerticalAlignment="Top" Background="White" Margin="485,242,0,0"
-                IsEnabled="{Binding IsSchedule}"/>
-        <Button Content="add day" Click="AddDay_Click" FontSize="20" Height="50" Width="100" HorizontalAlignment="Left" VerticalAlignment="Top" Background="White" Margin="604,242,0,0"
-                IsEnabled="{Binding IsSchedule}"/>
+        <Label Grid.Column="1" Grid.Row="0" Content="{Binding Path=MyClock}" HorizontalAlignment="Center" VerticalAlignment="Bottom" Height="50" Width="200" FontSize="30" FontFamily="Segoe UI Black"/>
+        <Button Content="add year" Click="AddYear_Click" FontSize="20" Height="50" Width="100"
+                HorizontalAlignment="Right" VerticalAlignment="Top" Background="White"
+                Grid.Column="1" Grid.Row="1" IsEnabled="{Binding IsSchedule}"/>
+        <Button Content="add month" Click="AddMonth_Click" FontSize="20" Height="50" Width="120" 
+                HorizontalAlignment="Center" VerticalAlignment="Top" Background="White"
+                Grid.Column="1" Grid.Row="1" IsEnabled="{Binding IsSchedule}"/>
+        <Button Content="add day" Click="AddDay_Click" FontSize="20" Height="50" Width="100" 
+                HorizontalAlignment="Left" VerticalAlignment="Top" Background="White"
+                Grid.Column="1" Grid.Row="1" IsEnabled="{Binding IsSchedule}"/>
 
     </Grid>
 </Window>
