--- a/PL/ManagerMainWindow.xaml
+++ b/PL/ManagerMainWindow.xaml
@@ -8,7 +8,69 @@
         Title="ManagerMainWindow" Height="450" Width="800"
         DataContext="{Binding RelativeSource={RelativeSource Mode=Self}}">
 
+    <Window.Resources>
+        <Style TargetType="Button">
+            <Setter Property="Background" Value="White"/>
+            <Setter Property="Foreground" Value="Black"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border CornerRadius="30" BorderThickness="1" Background="White">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <!--Trigger that will start the storyBoard and the animation when the mouse is enter the button:-->
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Trigger.EnterActions>
+                        <BeginStoryboard>
+                            <Storyboard>
+                                <!--Animates the button width:-->
+                                <DoubleAnimation
+                        From="200" To="220"
+                        Storyboard.TargetProperty="Width"
+                        Duration="0:0:0.4"/>
+                                <!--Animates the button height:-->
+                                <DoubleAnimation
+                        From="100" To="120"
+                        Storyboard.TargetProperty="Height"
+                        Duration="0:0:0.4"/>
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </Trigger.EnterActions>
+
+                    <Trigger.ExitActions>
+                        <BeginStoryboard>
+                            <Storyboard>
+                                <!--Animates the button width:-->
+                                <DoubleAnimation
+                        From="220" To="200"
+                        Storyboard.TargetProperty="Width"
+                        Duration="0:0:0.4"/>
+                                <!--Animates the button height:-->
+                                <DoubleAnimation
+                        From="120" To="100"
+                        Storyboard.TargetProperty="Height"
+                        Duration="0:0:0.4"/>
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </Trigger.ExitActions>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+    </Window.Resources>
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
         <Grid.Background>
             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                 <GradientStop Color="#FFF9FAFA"/>
@@ -16,28 +78,28 @@
             </LinearGradientBrush>
         </Grid.Background>
         <!--Show engineers Button-->
-        <Button Content="Show engineers" HorizontalAlignment="Left" Margin="490,120,0,0" VerticalAlignment="Top" 
-                Height="70" Width="130" Click="Button_Engineer_Click" FontSize="15" Background="White" BorderBrush="Black"
-                IsEnabled="{Binding IsSchedule}"/>
+        <Button Content="Show engineers" HorizontalAlignment="Center" VerticalAlignment="Center" 
+                Height="100" Width="200" Click="Button_Engineer_Click" FontSize="15" Background="White" BorderBrush="Black"
+                Grid.Column="2" Grid.Row="0" IsEnabled="{Binding IsSchedule}"/>
         <!--Show tasks Button-->
         <Button Content="show tasks" Click="Button_Task_Click"  FontSize="20" Background="White" BorderBrush="Black"
-        Height="70" Width="130" HorizontalAlignment="Left" Margin="490,230,0,0" VerticalAlignment="Top"/>
+        Grid.Column="2" Grid.Row="1" Height="100" Width="200" HorizontalAlignment="Center" VerticalAlignment="Center"/>
 
         <!--Initialize Data Button-->
-        <Button Content="Initialize data" HorizontalAlignment="Left" VerticalAlignment="Top" 
-                Height="70" Width="130" Click="Button_Initialize_Click" FontSize="20" Background="White" BorderBrush="Black" Margin="80,230,0,0"/>
+        <Button Content="Initialize data" HorizontalAlignment="Center" VerticalAlignment="Center" 
+                Grid.Column="0" Grid.Row="1" Height="100" Width="200" Click="Button_Initialize_Click" FontSize="20" Background="White" BorderBrush="Black"/>
         <!--Reset Data Button-->
-        <Button Content="Reset data" HorizontalAlignment="Left" VerticalAlignment="Top" 
-                Height="70" Width="130" Click="Button_Reset_Click" FontSize="20" Background="White" BorderBrush="Black" Margin="80,120,0,0"/>
+        <Button Content="Reset data" HorizontalAlignment="Center" VerticalAlignment="Center" 
+                Grid.Column="0" Grid.Row="0" Height="100" Width="200" Click="Button_Reset_Click" FontSize="20" Background="White" BorderBrush="Black"/>
 
         <!--Gantt Chart Button-->
-        <Button Content="Gantt Chart" Click="Button_Gantt_Click"  Width="130" Height="70" Background="White"
-                HorizontalAlignment="Left" VerticalAlignment="Top" Margin="280,230,0,0"
-                IsEnabled="{Binding IsSchedule}"/>
+        <Button Content="Gantt Chart" Click="Button_Gantt_Click"  Width="200" Height="100" Background="White"
+                HorizontalAlignment="Center" VerticalAlignment="Center"
+                Grid.Column="1" Grid.Row="1" IsEnabled="{Binding IsSchedule}"/>
         <!--Create a schedule Button-->
-        <Button Content="Create a schedule" Click="Button_CreateSchedule_Click"  Height="70" Width="130" Background="White" 
-                HorizontalAlignment="Left" VerticalAlignment="Top" Margin="280,120,0,0"
-                IsEnabled="{Binding IsSchedule, Converter={StaticResource TrueToFalseConverterKey}}"/>
+        <Button Content="Create a schedule" Click="Button_CreateSchedule_Click"  Height="100" Width="200" Background="White" 
+                HorizontalAlignment="Center" VerticalAlignment="Center"
+                Grid.Column="1" Grid.Row="0" IsEnabled="{Binding IsSchedule, Converter={StaticResource TrueToFalseConverterKey}}"/>
 
     </Grid>
 </Window>
