--- a/PL/CreateScheduleWindow.xaml
+++ b/PL/CreateScheduleWindow.xaml
@@ -7,6 +7,9 @@
         mc:Ignorable="d"
         Title="CreateScheduleWindow" Height="450" Width="800"
         DataContext="{Binding RelativeSource={RelativeSource Mode=Self}}">
+    <Window.Resources>
+        <ResourceDictionary Source="Themes/RoundedCorners.xaml"/>
+    </Window.Resources>
     <Grid Background="#FFFCC9C9">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"></ColumnDefinition>
