--- a/PL/EngineerMainWindow.xaml
+++ b/PL/EngineerMainWindow.xaml
@@ -7,7 +7,9 @@
         mc:Ignorable="d"
         Title="EngineerMainWindow" Width="1200" Height="680"
         DataContext="{Binding RelativeSource={RelativeSource Mode=Self}}">
-
+   <Window.Resources>
+        <ResourceDictionary Source="Themes/RoundedCorners.xaml"/>
+    </Window.Resources>
     <Grid>
         <Grid.Background>
             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
