--- a/PL/MainWindow.xaml
+++ b/PL/MainWindow.xaml
@@ -9,59 +9,9 @@
         DataContext="{Binding RelativeSource={RelativeSource Mode=Self}}">
 
     <Window.Resources>
-        <Style x:Key="animationAndRound" TargetType="Button">
-            <Setter Property="Background" Value="White"/>
-            <Setter Property="Foreground" Value="Black"/>
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="Button">
-                        <Border CornerRadius="30" BorderThickness="1" Background="White">
-                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                        </Border>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-            <Style.Triggers>
-                <!--Trigger that will start the storyBoard and the animation when the mouse is enter the button:-->
-                <Trigger Property="IsMouseOver" Value="True">
-                    <Trigger.EnterActions>
-                        <BeginStoryboard>
-                            <Storyboard>
-                                <!--Animates the button width:-->
-                                <DoubleAnimation
-                            From="200" To="220"
-                            Storyboard.TargetProperty="Width"
-                            Duration="0:0:0.4"/>
-                                <!--Animates the button height:-->
-                                <DoubleAnimation
-                            From="100" To="120"
-                            Storyboard.TargetProperty="Height"
-                            Duration="0:0:0.4"/>
-                            </Storyboard>
-                        </BeginStoryboard>
-                    </Trigger.EnterActions>
-
-                    <Trigger.ExitActions>
-                        <BeginStoryboard>
-                            <Storyboard>
-                                <!--Animates the button width:-->
-                                <DoubleAnimation
-                            From="220" To="200"
-                            Storyboard.TargetProperty="Width"
-                            Duration="0:0:0.4"/>
-                                <!--Animates the button height:-->
-                                <DoubleAnimation
-                            From="120" To="100"
-                            Storyboard.TargetProperty="Height"
-                            Duration="0:0:0.4"/>
-                            </Storyboard>
-                        </BeginStoryboard>
-                    </Trigger.ExitActions>
-                </Trigger>
-            </Style.Triggers>
-        </Style>
+        <ResourceDictionary Source="Themes/AnimationAndRounded.xaml"/>
     </Window.Resources>
-    
+
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="3*"/>
@@ -70,7 +20,7 @@
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="4*"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="1.5*"/>
             <RowDefinition Height="4*"/>
         </Grid.RowDefinitions>
         <Grid.Background>
@@ -80,27 +30,27 @@
             </LinearGradientBrush>
         </Grid.Background>
         <Button Content="Manager" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center"
-                Height="100" Width="200" FontFamily="Showcard Gothic" FontSize="24" Grid.RowSpan="2"
-                Click="ManagerMainWindow_Click" Background="White"
+                Height="70" Width="200" FontSize="24" Grid.RowSpan="2"
+                Click="ManagerMainWindow_Click"
                 Style="{StaticResource animationAndRound}"/>
 
 
         <Button Content="Engineer" IsEnabled="{Binding IsSchedule}" 
                 Grid.Column="0" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center"
-                Height="100" Width="200" FontFamily="Showcard Gothic" FontSize="24" Grid.RowSpan="2"
-                Click="EngineerMainWindow_Click" Background="White"
+                Height="70" Width="200" FontSize="24" Grid.RowSpan="2"
+                Click="EngineerMainWindow_Click"
                 Style="{StaticResource animationAndRound}"/>
 
-        
+
         <!--clock-->
-        <Label Grid.Column="1" Grid.Row="0" Content="{Binding Path=MyClock}" HorizontalAlignment="Center" VerticalAlignment="Bottom" Height="50" Width="200" FontSize="30" FontFamily="Segoe UI Black"/>
-        <Button Content="add year" Click="AddYear_Click" FontSize="20" Height="50" Width="100"
+        <Label Grid.Column="1" Grid.Row="0" Content="{Binding Path=MyClock}" HorizontalAlignment="Center" VerticalAlignment="Bottom" Height="70" Width="200" FontSize="30" FontFamily="Segoe UI Black"/>
+        <Button Content="add year" Click="AddYear_Click" FontSize="20" Height="70" Width="100"
                 HorizontalAlignment="Right" VerticalAlignment="Top" Background="White"
                 Grid.Column="1" Grid.Row="1" IsEnabled="{Binding IsSchedule}"/>
-        <Button Content="add month" Click="AddMonth_Click" FontSize="20" Height="50" Width="120" 
+        <Button Content="add month" Click="AddMonth_Click" FontSize="20" Height="70" Width="120" 
                 HorizontalAlignment="Center" VerticalAlignment="Top" Background="White"
                 Grid.Column="1" Grid.Row="1" IsEnabled="{Binding IsSchedule}"/>
-        <Button Content="add day" Click="AddDay_Click" FontSize="20" Height="50" Width="100" 
+        <Button Content="add day" Click="AddDay_Click" FontSize="20" Height="70" Width="100" 
                 HorizontalAlignment="Left" VerticalAlignment="Top" Background="White"
                 Grid.Column="1" Grid.Row="1" IsEnabled="{Binding IsSchedule}"/>
 
