--- a/PL/ManagerMainWindow.xaml
+++ b/PL/ManagerMainWindow.xaml
@@ -9,57 +9,7 @@
         DataContext="{Binding RelativeSource={RelativeSource Mode=Self}}">
 
     <Window.Resources>
-        <Style TargetType="Button">
-            <Setter Property="Background" Value="White"/>
-            <Setter Property="Foreground" Value="Black"/>
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="Button">
-                        <Border CornerRadius="30" BorderThickness="1" Background="White">
-                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                        </Border>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-            <Style.Triggers>
-                <!--Trigger that will start the storyBoard and the animation when the mouse is enter the button:-->
-                <Trigger Property="IsMouseOver" Value="True">
-                    <Trigger.EnterActions>
-                        <BeginStoryboard>
-                            <Storyboard>
-                                <!--Animates the button width:-->
-                                <DoubleAnimation
-                        From="200" To="220"
-                        Storyboard.TargetProperty="Width"
-                        Duration="0:0:0.4"/>
-                                <!--Animates the button height:-->
-                                <DoubleAnimation
-                        From="100" To="120"
-                        Storyboard.TargetProperty="Height"
-                        Duration="0:0:0.4"/>
-                            </Storyboard>
-                        </BeginStoryboard>
-                    </Trigger.EnterActions>
-
-                    <Trigger.ExitActions>
-                        <BeginStoryboard>
-                            <Storyboard>
-                                <!--Animates the button width:-->
-                                <DoubleAnimation
-                        From="220" To="200"
-                        Storyboard.TargetProperty="Width"
-                        Duration="0:0:0.4"/>
-                                <!--Animates the button height:-->
-                                <DoubleAnimation
-                        From="120" To="100"
-                        Storyboard.TargetProperty="Height"
-                        Duration="0:0:0.4"/>
-                            </Storyboard>
-                        </BeginStoryboard>
-                    </Trigger.ExitActions>
-                </Trigger>
-            </Style.Triggers>
-        </Style>
+        <ResourceDictionary Source="Themes/AnimationAndRounded.xaml"/>
     </Window.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
@@ -79,27 +29,33 @@
         </Grid.Background>
         <!--Show engineers Button-->
         <Button Content="Show engineers" HorizontalAlignment="Center" VerticalAlignment="Center" 
-                Height="100" Width="200" Click="Button_Engineer_Click" FontSize="15" Background="White" BorderBrush="Black"
-                Grid.Column="2" Grid.Row="0" IsEnabled="{Binding IsSchedule}"/>
+                Height="70" Width="200" Click="Button_Engineer_Click" FontSize="15"
+                Grid.Column="2" Grid.Row="0" IsEnabled="{Binding IsSchedule}"
+                Style="{StaticResource animationAndRound}"/>
         <!--Show tasks Button-->
-        <Button Content="show tasks" Click="Button_Task_Click"  FontSize="20" Background="White" BorderBrush="Black"
-        Grid.Column="2" Grid.Row="1" Height="100" Width="200" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Button Content="show tasks" Click="Button_Task_Click"  FontSize="20"
+        Grid.Column="2" Grid.Row="1" Height="70" Width="200" HorizontalAlignment="Center" VerticalAlignment="Center"
+                Style="{StaticResource animationAndRound}"/>
 
         <!--Initialize Data Button-->
         <Button Content="Initialize data" HorizontalAlignment="Center" VerticalAlignment="Center" 
-                Grid.Column="0" Grid.Row="1" Height="100" Width="200" Click="Button_Initialize_Click" FontSize="20" Background="White" BorderBrush="Black"/>
+                Grid.Column="0" Grid.Row="1" Height="70" Width="200" Click="Button_Initialize_Click" FontSize="20"
+                Style="{StaticResource animationAndRound}"/>
         <!--Reset Data Button-->
         <Button Content="Reset data" HorizontalAlignment="Center" VerticalAlignment="Center" 
-                Grid.Column="0" Grid.Row="0" Height="100" Width="200" Click="Button_Reset_Click" FontSize="20" Background="White" BorderBrush="Black"/>
+                Grid.Column="0" Grid.Row="0" Height="70" Width="200" Click="Button_Reset_Click" FontSize="20"
+                Style="{StaticResource animationAndRound}"/>
 
         <!--Gantt Chart Button-->
-        <Button Content="Gantt Chart" Click="Button_Gantt_Click"  Width="200" Height="100" Background="White"
-                HorizontalAlignment="Center" VerticalAlignment="Center"
-                Grid.Column="1" Grid.Row="1" IsEnabled="{Binding IsSchedule}"/>
+        <Button Content="Gantt Chart" Click="Button_Gantt_Click"  Width="200" Height="70"
+                HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20"
+                Grid.Column="1" Grid.Row="1" IsEnabled="{Binding IsSchedule}"
+                Style="{StaticResource animationAndRound}"/>
         <!--Create a schedule Button-->
-        <Button Content="Create a schedule" Click="Button_CreateSchedule_Click"  Height="100" Width="200" Background="White" 
-                HorizontalAlignment="Center" VerticalAlignment="Center"
-                Grid.Column="1" Grid.Row="0" IsEnabled="{Binding IsSchedule, Converter={StaticResource TrueToFalseConverterKey}}"/>
+        <Button Content="Create a schedule" Click="Button_CreateSchedule_Click"  Height="70" Width="200"
+                HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="15"
+                Grid.Column="1" Grid.Row="0" IsEnabled="{Binding IsSchedule, Converter={StaticResource TrueToFalseConverterKey}}"
+                Style="{StaticResource animationAndRound}"/>
 
     </Grid>
 </Window>
