--- a/PL/Task/TaskWindow.xaml
+++ b/PL/Task/TaskWindow.xaml
@@ -7,6 +7,21 @@
         mc:Ignorable="d"
         Title="TaskWindow"  Height="700" Width="1000"
         DataContext="{Binding RelativeSource={RelativeSource Mode=Self}}">
+    <Window.Resources>
+        <Style TargetType="Button">
+            <Setter Property="Background" Value="White"/>
+            <Setter Property="Foreground" Value="Black"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border CornerRadius="20" BorderThickness="1" Background="White">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Window.Resources>
     <Grid>
         <Grid.Background>
             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -168,10 +183,10 @@
 
         <!-- add / update button-->
         <Button Content="{Binding Path=MyTask.Id, Converter={StaticResource ConverIdToContentKey}}"
-                Grid.ColumnSpan="5" Grid.Row="14" HorizontalAlignment="Center" Height="50"
+                Grid.ColumnSpan="5" Grid.Row="14" HorizontalAlignment="Center" Height="70"
                 Width="200" Click="Add_Update_Click" VerticalAlignment="Center" Background="#FFFFFEFE"/>
         <!--delete button-->
-        <Button Content="Delete task" Grid.Row="14" HorizontalAlignment="Left" Height="50"
+        <Button Content="Delete task" Grid.Row="14" HorizontalAlignment="Left" Height="70"
                 Width="115" Click="Delete_Click"  VerticalAlignment="Center" Background="#FFFFFEFE" Grid.Column="1" Grid.ColumnSpan="3" Margin="82,0,0,0"/>
     </Grid>
 </Window>
