--- a/PL/Task/TaskListWindow.xaml
+++ b/PL/Task/TaskListWindow.xaml
@@ -45,7 +45,7 @@
                 </GridView>
             </ListView.View>
 
-            <!--Internal, lowwer Grid-->
+        <!--Internal, lower Grid-->
         </ListView>
         <Button Content="Add" Grid.Row="2" HorizontalAlignment="Center" Height="50" Width="100"
                 IsEnabled="{Binding IsSchedule, Converter={StaticResource TrueToFalseConverterKey}}"
