--- a/PL/Task/TaskWindow.xaml
+++ b/PL/Task/TaskWindow.xaml
@@ -37,7 +37,7 @@
             <RowDefinition Height="1*"/>
             <RowDefinition Height="1*"/>
             <RowDefinition Height="1*"/>
-            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1.5*"/>
             <RowDefinition Height="2*"/>
         </Grid.RowDefinitions>
 
@@ -141,37 +141,34 @@
         <!-- task engineer -->
         <Label Grid.Row="13" Grid.Column="1" Content="Assigned Engineer:" 
                HorizontalAlignment="Right" VerticalAlignment="Top" Grid.ColumnSpan="2" Margin="0,6,33,0"/>
-        <Button Content="Choose from list" Grid.Row="13" Grid.Column="3" HorizontalAlignment="Left" Height="30"
-                Width="100" Click="ChooseEngineer_Click"  Background="#FFFFFEFE"
-                Visibility="{Binding MyTask.Engineer, Converter={StaticResource VisibilityNullConverterKey}}"/>
-        <TextBox Grid.Row="12" Grid.Column="3" Text="{Binding MyTask.Engineer}" IsEnabled="False"
-                 Visibility="{Binding MyTask.Engineer, Converter={StaticResource VisibilityNotNullConverterKey}}" Margin="0,41,30,2" Grid.RowSpan="2"/>
+        <Button Content="Choose from list" Grid.Row="13" Grid.Column="3" HorizontalAlignment="Right" Height="30"
+                Width="100" Click="ChooseEngineer_Click"  Background="#FFFFFEFE" Margin="0,0,10,0"
+                Visibility="{Binding MyTask.Engineer, Converter={StaticResource VisibilityNullConverterKey}}"/> 
+        <Label Grid.Row="13" Grid.Column="3" Content="{Binding MyEngineer}" Width="200" 
+               HorizontalAlignment="Left" BorderBrush="Black" Background="White"/>
 
 
         <!-- task dependencies -->
         <Label Grid.Row="0" Grid.Column="4" Content="Dependencies:" 
-        HorizontalAlignment="Left" VerticalAlignment="Center" Visibility="{Binding DependenciesListView}"/>
-        <ListView Grid.Column="4" Grid.RowSpan="12" Grid.Row="1"
-           HorizontalAlignment="Center" Width="400" Visibility="{Binding DependenciesListView}"
-           ItemsSource="{Binding Path=MyTask.Dependencies, IsAsync=False}" />
-        <Button Content="Add Dependant Task" HorizontalAlignment="Center"
+        HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <ListView Grid.Column="4" Grid.RowSpan="12" Grid.Row="1" MouseDoubleClick="Dependency_Selected"
+           HorizontalAlignment="Center" Width="400"
+           ItemsSource="{Binding Path=NewDepList}"/>
+        <Button Content="Add Dependant Task" HorizontalAlignment="Left" Margin="10,0,0,0"
                 Grid.Column="4" Grid.Row="13" Click="AddDependency"
                 VerticalAlignment="Center" Background="White"/>
+        <Button Content="Remove Dependant Task" HorizontalAlignment="Right" Margin="0,0,10,0"
+        Grid.Column="4" Grid.Row="13" Click="RemoveDep_Click"  Visibility="{Binding TaskSelected, Converter={StaticResource TrueToVisibilityConverterKey}}"
+        VerticalAlignment="Center" Background="White" IsEnabled="{Binding MyDependency, Converter={StaticResource NullToFalseConverterKey}}"/>
 
 
-        <!-- list of tasks to add to dependencies -->
-        <Label Grid.Row="0" Grid.Column="4" Content="Choose Task To Add:" 
-        HorizontalAlignment="Left" VerticalAlignment="Center" Visibility="{Binding DependenciesToAdd}"/>
-        <ListView Grid.Column="4" Grid.RowSpan="12" Grid.Row="1"
-        HorizontalAlignment="Center" Width="400" MouseDoubleClick="ChooseTask_MouseDoubleClick"
-        ItemsSource="{Binding TaskList}" Visibility="{Binding DependenciesToAdd}"/>
 
         <!-- add / update button-->
         <Button Content="{Binding Path=MyTask.Id, Converter={StaticResource ConverIdToContentKey}}"
-                Grid.ColumnSpan="5" Grid.Row="14" HorizontalAlignment="Center" Height="50"
+                Grid.ColumnSpan="3" Grid.Column="2" Grid.Row="14" HorizontalAlignment="Center" Height="50"
                 Width="200" Click="Add_Update_Click" VerticalAlignment="Center" Background="#FFFFFEFE"/>
         <!--delete button-->
-        <Button Content="Delete task" Grid.Row="14" HorizontalAlignment="Left" Height="50"
-                Width="115" Click="Delete_Click"  VerticalAlignment="Center" Background="#FFFFFEFE" Grid.Column="1" Grid.ColumnSpan="3" Margin="82,0,0,0"/>
+        <Button Content="Delete task" Grid.Row="14" HorizontalAlignment="Center" Height="50"
+                Width="115" Click="Delete_Click"  VerticalAlignment="Center" Background="#FFFFFEFE" Grid.Column="1" Grid.ColumnSpan="3"/>
     </Grid>
 </Window>
