--- a/PL/Engineer/EngineerWindow.xaml
+++ b/PL/Engineer/EngineerWindow.xaml
@@ -87,7 +87,7 @@
                 Padding="5" Click="AddUpdate_Click" IsEnabled="True" Background="White" BorderBrush="Black"/>
         <!--Delete Button-->
         <Button Grid.Row="6" HorizontalAlignment="Left" Margin="20,18,0,17"
-        Content="Delete Engineer" FontSize="20" Width="200"
+        Content="Delete Engineer" FontSize="20" Width="200" Visibility="{Binding Id, Converter={StaticResource IdToVisibilityConverterKey}}"
         Click="Delete_Click" Background="White" Grid.Column="1"/>
 
     </Grid>
