--- a/PL/Task/TaskWindow.xaml
+++ b/PL/Task/TaskWindow.xaml
@@ -156,8 +156,9 @@
         <!-- task engineer -->
         <Label Grid.Row="13" Grid.Column="1" Content="Assigned Engineer:" 
                HorizontalAlignment="Right" VerticalAlignment="Top" Grid.ColumnSpan="2" Margin="0,6,33,0"/>
-        <Button Content="Choose from list" Grid.Row="13" Grid.Column="3" HorizontalAlignment="Right" Height="30"
-                Width="100" Click="ChooseEngineer_Click"  Background="#FFFFFEFE" Margin="0,0,10,0"
+        <!-- button for choosing an enginner -->
+        <Button Content="Choose from list" Grid.Row="13" Grid.Column="3" HorizontalAlignment="Right"
+                Width="100" Click="ChooseEngineer_Click" Margin="0,0,10,0" Height="25"
                 Visibility="{Binding MyTask.Engineer, Converter={StaticResource VisibilityNullConverterKey}}"/> 
         <Label Grid.Row="13" Grid.Column="3" Content="{Binding MyEngineer}" Width="200" 
                HorizontalAlignment="Left" BorderBrush="Black" Background="White"/>
@@ -166,15 +167,20 @@
         <!-- task dependencies -->
         <Label Grid.Row="0" Grid.Column="4" Content="Dependencies:" 
         HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <!-- listview of the dependencies -->
         <ListView Grid.Column="4" Grid.RowSpan="12" Grid.Row="1" MouseDoubleClick="Dependency_Selected"
            HorizontalAlignment="Center" Width="400"
            ItemsSource="{Binding Path=NewDepList}"/>
+        <!-- button to open a window for adding a dependency -->
         <Button Content="Add Dependant Task" HorizontalAlignment="Left" Margin="10,0,0,0"
-                Grid.Column="4" Grid.Row="13" Click="AddDependency"
+                Grid.Column="4" Grid.Row="13" Click="AddDependency" Width="150" Height="20"
                 VerticalAlignment="Center" Background="White"/>
+        <!-- button to remove a dependency -->
         <Button Content="Remove Dependant Task" HorizontalAlignment="Right" Margin="0,0,10,0"
-        Grid.Column="4" Grid.Row="13" Click="RemoveDep_Click"  Visibility="{Binding TaskSelected, Converter={StaticResource TrueToVisibilityConverterKey}}"
-        VerticalAlignment="Center" Background="White" IsEnabled="{Binding MyDependency, Converter={StaticResource NullToFalseConverterKey}}"/>
+        Grid.Column="4" Grid.Row="13" Click="RemoveDep_Click" VerticalAlignment="Center" 
+        Width="150" Height="20"
+        Visibility="{Binding TaskSelected, Converter={StaticResource TrueToVisibilityConverterKey}}"
+        IsEnabled="{Binding MyDependency, Converter={StaticResource NullToFalseConverterKey}}"/>
 
 
 
@@ -183,7 +189,7 @@
                 Grid.ColumnSpan="3" Grid.Column="2" Grid.Row="14" HorizontalAlignment="Center" Height="50"
                 Width="200" Click="Add_Update_Click" VerticalAlignment="Center" Background="#FFFFFEFE"/>
         <!--delete button-->
-        <Button Content="Delete task" Grid.Row="14" HorizontalAlignment="Center" Height="50"
-                Width="115" Click="Delete_Click"  VerticalAlignment="Center" Background="#FFFFFEFE" Grid.Column="1" Grid.ColumnSpan="3"/>
+        <Button Content="Delete task" Grid.Row="14" HorizontalAlignment="Center" Height="50" Visibility="{Binding Path=MyTask.Id, Converter={StaticResource IdToVisibilityConverterKey}}"
+                Width="115" Click="Delete_Click"  VerticalAlignment="Center" Grid.Column="1" Grid.ColumnSpan="3"/>
     </Grid>
 </Window>
