--- a/PL/Engineer/EngineerWindow.xaml
+++ b/PL/Engineer/EngineerWindow.xaml
@@ -45,26 +45,26 @@
         <Label Grid.Column="0" Content="Id:" FontSize="15" HorizontalAlignment="Left" Margin="65,0,0,0" Grid.Row="0" VerticalAlignment="Center"/>
         <!--Engineer Id TextBox-->
         <TextBox Grid.Column="1" Grid.Row="0" HorizontalAlignment="Left"
-                 MaxLength="9" Width="290" Margin="10,20,10,20"
+                 MaxLength="9" Width="300" Margin="10,20,10,20"
                  IsEnabled="{Binding Id, Converter={StaticResource ConvertIdToBooleanKey}}"
                  Text="{Binding Id, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}"/>
 
         <Label Grid.Column="0" Content="Name:" FontSize="15" HorizontalAlignment="Left" Margin="65,0,0,0" Grid.Row="1" VerticalAlignment="Center"/>
         <!--Engineer Name TextBox-->
         <TextBox Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left"
-                 Width="290" Margin="10,20,10,20"
+                 Width="300" Margin="10,20,10,20"
                  Text="{Binding Name, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" BorderBrush="White"/>
 
         <Label Grid.Column="0" Content="Email:" FontSize="15" HorizontalAlignment="Left" Margin="65,0,0,0" Grid.Row="2" VerticalAlignment="Center"/>
         <!--Engineer Email TextBox-->
         <TextBox Grid.Column="1" Grid.Row="2" HorizontalAlignment="Left"
-                 Width="290" Margin="10,20,10,20"
+                 Width="300" Margin="10,20,10,20"
                  Text="{Binding Email, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" BorderBrush="White"/>
 
         <Label Grid.Column="0" Content="Level:" FontSize="15" HorizontalAlignment="Left" Margin="65,0,0,0" Grid.Row="3" VerticalAlignment="Center"/>
         <!--Engineer Level ComboBox-->
         <ComboBox Grid.Column="1" Grid.Row="3" HorizontalAlignment="Left"
-                  Height="25" Width="290" Margin="10,15,0,20" 
+                  Height="25" Width="300" Margin="10,15,0,20" 
                   ItemsSource="{Binding Source={StaticResource EngineerExperienceLevelKey}}"
                   SelectedValue="{Binding Level, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" BorderBrush="White"/>
 
@@ -72,14 +72,14 @@
                Grid.Row="4" FontSize="15" VerticalAlignment="Center"/>
         <!--Engineer Cost TextBox-->
         <TextBox Grid.Column="1" Grid.Row="4" HorizontalAlignment="Left"
-                 Width="290" Margin="10,20,10,20"
+                 Width="300" Margin="10,20,10,20"
                  Text="{Binding Cost, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" BorderBrush="White"/>
 
         <Label Grid.Column="0" Content="Task:" HorizontalAlignment="Left" Margin="65,0,0,0" 
             Grid.Row="5" FontSize="15" VerticalAlignment="Center"/>
         <!--Engineer Task-->
-        <Label Grid.Row="4" Content="{Binding Task}" Margin="10,61,283,2" 
-               Grid.Column="1" Grid.RowSpan="2" />
+        <Label Grid.Row="5" Content="{Binding Task}" Width="300" HorizontalAlignment="Left" Background="White" Height="70"  
+               Grid.Column="1"/>
 
         <!--Add/Update Button-->
         <Button Grid.Column="1" Grid.Row="6" HorizontalAlignment="Left" Margin="300,18,0,17" Width="200"
@@ -87,7 +87,8 @@
                 Padding="5" Click="AddUpdate_Click" IsEnabled="True" Background="White" BorderBrush="Black"/>
         <!--Delete Button-->
         <Button Grid.Row="6" HorizontalAlignment="Left" Margin="20,18,0,17"
-        Content="Delete Engineer" FontSize="20" Width="200" Visibility="{Binding Id, Converter={StaticResource IdToVisibilityConverterKey}}"
+        Content="Delete Engineer" FontSize="20" Width="200" 
+        Visibility="{Binding Id, Converter={StaticResource IdToVisibilityConverterKey}, Mode=OneTime}"
         Click="Delete_Click" Background="White" Grid.Column="1"/>
 
     </Grid>
