--- a/PL/Task/TaskWindow.xaml
+++ b/PL/Task/TaskWindow.xaml
@@ -21,6 +21,12 @@
                 </Setter.Value>
             </Setter>
         </Style>
+        <Style TargetType="Label" x:Key="DataLabel">
+            <Setter Property="Background" Value="White"/>
+            <Setter Property="Height" Value="25"/>
+            <Setter Property="Width" Value="200"/>
+            <Setter Property="HorizontalAlignment" Value="Left"/>
+        </Style>
     </Window.Resources>
     <Grid>
         <Grid.Background>
@@ -80,47 +86,40 @@
         <!-- task status -->
         <Label Grid.Row="3" Grid.Column="1" Content="Status:" 
        HorizontalAlignment="Right" VerticalAlignment="Center"/>
-        <TextBox Grid.Row="3" Grid.Column="3" 
-         HorizontalAlignment="Left" VerticalAlignment="Center"
-         Text="{Binding Path=MyTask.Status}" IsEnabled="False" Width="200"/>
+        <Label Grid.Row="3" Grid.Column="3" 
+         Style="{StaticResource DataLabel}" VerticalAlignment="Center"
+         Content="{Binding Path=MyTask.Status}"/>
 
         <!-- task creation date -->
         <Label Grid.Row="4" Grid.Column="1" Content="Creation Date:" 
         HorizontalAlignment="Right" VerticalAlignment="Center"/>
-        <TextBox Grid.Row="4" Grid.Column="3" 
-        HorizontalAlignment="Left" VerticalAlignment="Center"
-        Text="{Binding Path=MyTask.CreatedAtDate}" IsEnabled="False" Width="200"/>
+        <Label Grid.Row="4" Grid.Column="3" 
+        Style="{StaticResource DataLabel}" VerticalAlignment="Center"
+        Content="{Binding Path=MyTask.CreatedAtDate}"/>
 
         <!-- task scheduled date -->
         <Label Grid.Row="5" Grid.Column="1" Content="Scheduled Starting Date:" 
         HorizontalAlignment="Right" VerticalAlignment="Center"/>
-        <TextBox Text="{Binding Path=MyTask.ScheduledDate, Mode=TwoWay}" 
-                 Grid.Row="5" Grid.Column="3" Width="200" IsEnabled="False"
-                 HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Label Content="{Binding Path=MyTask.ScheduledDate}"  Style="{StaticResource DataLabel}"
+                 Grid.Row="5" Grid.Column="3" VerticalAlignment="Center"/>
 
         <!-- task start date  -->
         <Label Grid.Row="6" Grid.Column="1" Content="Starting Date:" 
         HorizontalAlignment="Right" VerticalAlignment="Center"/>
-        <TextBox Text="{Binding Path=MyTask.StartDate, Mode=TwoWay}" 
-         Grid.Row="6" Grid.Column="3" Width="200"
-                 IsEnabled="False"
-         HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Label Content="{Binding Path=MyTask.StartDate}" Style="{StaticResource DataLabel}"
+         Grid.Row="6" Grid.Column="3" VerticalAlignment="Center"/>
 
         <!-- task forcast date -->
         <Label Grid.Row="7" Grid.Column="1" Content="Forcast Completion Date:" 
         HorizontalAlignment="Right" VerticalAlignment="Center"/>
-        <TextBox Text="{Binding Path=MyTask.ForecastDate, Mode=TwoWay}" 
-         Grid.Row="7" Grid.Column="3" Width="200" 
-                 IsEnabled="False"
-         HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Label Content="{Binding Path=MyTask.ForecastDate}" Grid.Row="7" Grid.Column="3" 
+          VerticalAlignment="Center" Style="{StaticResource DataLabel}"/>
 
         <!-- task end date -->
         <Label Grid.Row="8" Grid.Column="1" Content="Completion Date:" 
         HorizontalAlignment="Right" VerticalAlignment="Center"/>
-        <TextBox Text="{Binding Path=MyTask.CompleteDate, Mode=TwoWay, UpdateSourceTrigger=LostFocus}" 
-         Grid.Row="8" Grid.Column="3" Width="200" 
-                 IsEnabled="False"
-         HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Label Content="{Binding Path=MyTask.CompleteDate}" Style="{StaticResource DataLabel}"
+         Grid.Row="8" Grid.Column="3" VerticalAlignment="Center" />
 
         <!-- task effort time -->
         <Label Grid.Row="9" Grid.Column="1" Content="Required Effort Time:" 
@@ -161,7 +160,7 @@
                 Width="100" Click="ChooseEngineer_Click" Margin="0,0,10,0" Height="25"
                 Visibility="{Binding MyTask.Engineer, Converter={StaticResource VisibilityNullConverterKey}}"/> 
         <Label Grid.Row="13" Grid.Column="3" Content="{Binding MyEngineer}" Width="200" 
-               HorizontalAlignment="Left" BorderBrush="Black" Background="White"/>
+               HorizontalAlignment="Left" Background="White"/>
 
 
         <!-- task dependencies -->
@@ -189,7 +188,8 @@
                 Grid.ColumnSpan="3" Grid.Column="2" Grid.Row="14" HorizontalAlignment="Center" Height="50"
                 Width="200" Click="Add_Update_Click" VerticalAlignment="Center" Background="#FFFFFEFE"/>
         <!--delete button-->
-        <Button Content="Delete task" Grid.Row="14" HorizontalAlignment="Center" Height="50" Visibility="{Binding Path=MyTask.Id, Converter={StaticResource IdToVisibilityConverterKey}}"
+        <Button Content="Delete task" Grid.Row="14" HorizontalAlignment="Center" Height="50" 
+                Visibility="{Binding Path=MyTask.Id, Converter={StaticResource IdToVisibilityConverterKey}}"
                 Width="115" Click="Delete_Click"  VerticalAlignment="Center" Grid.Column="1" Grid.ColumnSpan="3"/>
     </Grid>
 </Window>
